--- a/d3s9-opengovernment/d3s9-opengovernment.Rmd
+++ b/d3s9-opengovernment/d3s9-opengovernment.Rmd
@@ -18,56 +18,480 @@ output:
       hash: true
 ---
 
+
+# Inhaltsverzeichnis
+
+<br><br>
+
+1. [Relationale Datenstrukturen](#relationaldata)
+2. [Open Government Data](#ogd)
+3. [Daten-Workflow in der Behörde](#workflow)
+
+
+
+
+---
+class: inverse, center, middle
+name: relationaldata
+
+# Relationale Datenstrukturen
+<html><div style='float:left'></div><hr color='#EB811B' size=1px style="width:1000px; margin:auto;"/></html>
+
+
+---
+# Die Allgegenwärtigkeit von relationalen Datenstrukturen
+
+.pull-left-wide[
+### Von Tabellen...
+
+- Wenn Sie an Daten auf Ihrem Laptop denken, haben Sie möglicherweise ein [Spreadsheet](https://de.wikipedia.org/wiki/Tabellenkalkulation) im Kopf.
+- In der Tat arbeitet ein Großteil der klassischen "statistischen" Software (SPSS, Stata, MS Excel) standardmäßig mit Spreadsheets als Dateninput.
+- Gleichzeitig ist einer Ihrer ersten Gedanken möglicherweise auch [dateibasiert](https://en.wikipedia.org/wiki/List_of_file_formats). Die Daten werden in Dateien gespeichert, und diese Dateien werden von unserer Datenverwaltungssoftware gelesen (und erstellt).
+- In vielen Fällen ist eine **zweidimensionale Datenstruktur** sinnvoll. Wir nutzen zum Beispiel
+  - Befragte x Einstellungen
+  - Bezirke x Merkmale
+  - Beiträge in sozialen Medien x Textmerkmale
+]
+
+.pull-right-small[
+<br><br>
+<div align="center">
+<img src="../pics/clippy-message.jpeg" height=200> 
+</div>
+]
+
+
+---
+
+# Die Allgegenwärtigkeit von mehrdimensionalen Datenstrukturen
+
+.pull-left-small2[
+<div align="center">
+<img src="../pics/legislator-structure.png" height=520>
+</div>
+`Credit` [saschagobel/legislatoR](https://github.com/saschagobel/legislatoR)
+]
+
+.pull-right-wide2[
+### ... zu komplexen Datenstrukturen
+
+- Je länger man jedoch darüber nachdenkt, desto problematischer wird es, Daten systematisch in zweidimensionalen Strukturen abzulegen.
+- **Beispiele**:
+  - Befragte x Einstellungen x Länder x Zeit
+  - Bezirke x Unterbezirke Merkmale x Zeit
+  - Beiträge in sozialen Medien x Retweets x Benutzer x Benutzereigenschaften x Netzwerkmerkmale x Metadaten
+- Die Abbildung von dreidimensionalen auf zweidimensionale Strukturen ist technisch einfach machbar.
+- Bei **vielfachen heterogenen Datenquellen** wird es unübersichtlich.
+- Die Verwaltung komplexer Datenstrukturen ist nur ein Vorteil der Verwendung von **Datenbanken**.
+]
+
+
+---
+
+# Wann Datenbanken nützlich werden
+
+.pull-left[
+### Größe und Struktur
+- Sie haben **Datenmengen, die den Arbeitsspeicher** auf Ihrem Computer übersteigen. Datenbanken sind nur durch die verfügbare Festplattengröße begrenzt (oder können auf mehrere Festplatten/Rechner verteilt werden).
+- Ihre **Datenstruktur ist komplex**. Datenbanken erlauben es, Daten mit komplexen Datenstrukturen zu speichern, abzurufen und zu untergliedern.
+- Ihre Daten sind groß und Sie müssen **häufig darauf zugreifen/daraus filtern**. Die Abfrage von Datenbanken ist schnell.
+- Sie legen Wert auf **Datenqualität** und haben klare Vorstellungen, wie Daten aussehen sollen. Mit Hilfe von Datenbanken können Sie spezifische Regeln für die Erweiterung und Aktualisierung Ihrer Datenbank definieren.
+]
+
+--
+
+.pull-right[
+### Zugänglichkeit und Gleichzeitigkeit
+- Sie **arbeiten gemeinsam mit anderen** an einem Datenprojekt Mit einer Datenbank haben Sie eine gemeinsame, zuverlässige Infrastruktur zur Verfügung, auf die mehrere Benutzer gleichzeitig zugreifen können.
+- Wenn mehrere Parteien beteiligt sind, können Nutzerprivilegien wichtig sein (z. B. nur Lesezugriff, Zugriff auf Teile der Daten, eingeschränkte Verwaltungsrechte usw.). Die meisten Datenbanken erlauben die **Definition unterschiedlicher Nutzungsrechte für verschiedene Benutzer**.
+]
+
+
+---
+# Codds relationales Modell für Datenbanken
+
+.pull-left[
+- Das Konzept relationaler Datenbanken baut auf dem [relational model (RM)](https://en.wikipedia.org/wiki/Relational_model) auf, das 1969/1970 von [Edgar F. "Ted" Codd](https://en.wikipedia.org/wiki/Edgar_F._Codd) vorgeschlagen wurde.
+- Codd beschrieb das RM formal, führte es aber auch mit Konzepten ein, die auch heute noch verwendet werden (Normalisierung, Schlüssel, Joins, usw.).
+- Die Grundannahme des relationalen Modells ist, dass alle Daten als Relationen (Tabellen) dargestellt werden können.
+- Informationen werden dann durch in Beziehung stehende Datenwerte dargestellt.
+
+<div align="center">
+<img src="../pics/edgar-codd.jpeg" height=150>
+</div>
+]
+
+
+.pull-right-center[
+<div align="center">
+<img src="../pics/codd-relational-model.png" height=500>
+</div>
+`Credit` [Communications of the ACM 13(6), 1970](https://dl.acm.org/doi/10.1145/362384.362685)
+]
+
+
+---
+# Tabellarische Daten: Beispiel
+
+.pull-left[
+### Speicherung von Daten in Tabellen
+
+- Eine einzige Tabelle stellt bereits Beziehungen her: Alle Daten in einer Zeile gehören zu demselben Datensatz.
+- Wenn wir komplexere Beziehungen darstellen wollen (z. B. das Gewicht einer Person zweimal messen oder das Gewicht ihrer Kinder ebenfalls messen), können wir Daten von einer Tabelle zur anderen in Beziehung setzen.
+
+### Beispiel
+
+- Wir haben Daten über Peter, Paul und Mary gesammelt.
+- Wir haben Informationen über Geburtstage, Telefonnummern und Lieblingsspeisen.
+- Wie können wir diese Informationen in Tabellen darstellen?
+]
+
+--
+
+.pull-right[
+<div align="center">
+<img src="../pics/adcr-relational-data-1.png" width=600>
+</div>
+<div align="center">
+<img src="../pics/adcr-relational-data-2.png" width=300>
+</div>
+
+- Wir beginnen mit der Darstellung der Daten in zwei Tabellen.
+- Sie sind über den Schlüssel `nameid` verknüpft, so dass wir die vollständigen Namen nicht in die Tabelle der Telefonnummern aufnehmen müssen.
+- Beachten Sie, dass wir hier eine 1:m (one-to-many) Beziehung haben, da Peter zwei Telefonnummern hat.
+]
+
+---
+# Tabellarische Daten: Beispiel
+
+.pull-left[
+### Speicherung von Daten in Tabellen
+
+- Eine einzige Tabelle stellt bereits Beziehungen her: Alle Daten in einer Zeile gehören zu demselben Datensatz.
+- Wenn wir komplexere Beziehungen darstellen wollen (z. B. das Gewicht einer Person zweimal messen oder das Gewicht ihrer Kinder ebenfalls messen), können wir Daten von einer Tabelle zur anderen in Beziehung setzen.
+
+### Beispiel
+
+- Wir haben Daten über Peter, Paul und Mary gesammelt.
+- Wir haben Informationen über Geburtstage, Telefonnummern und Lieblingsspeisen.
+- Wie können wir diese Informationen in Tabellen darstellen?
+]
+
+.pull-right[
+<div align="center">
+<img src="../pics/adcr-relational-data-1.png" width=600>
+</div>
+<div align="center">
+<img src="../pics/adcr-relational-data-2.png" width=300>
+</div>
+
+- Die Art und Weise, wie wir die Daten speichern, ist jedoch nicht ideal. In der ersten Tabelle haben wir drei Spalten, die praktisch das Gleiche messen. Und was, wenn es noch mehr Lieblingsessen gibt? Das Hinzufügen von Informationen auf diese Weise führt zu einer Menge redundanter Informationen.
+- Wir können die Daten normalisieren, um Redundanzen zu vermeiden.
+]
+
+
+---
+# Tabellarische Daten: Beispiel
+
+.pull-left[
+### Speicherung von Daten in Tabellen
+
+- Eine einzige Tabelle stellt bereits Beziehungen her: Alle Daten in einer Zeile gehören zu demselben Datensatz.
+- Wenn wir komplexere Beziehungen darstellen wollen (z. B. das Gewicht einer Person zweimal messen oder das Gewicht ihrer Kinder ebenfalls messen), können wir Daten von einer Tabelle zur anderen in Beziehung setzen.
+
+### Beispiel
+
+- Wir haben Daten über Peter, Paul und Mary gesammelt.
+- Wir haben Informationen über Geburtstage, Telefonnummern und Lieblingsspeisen.
+- Wie können wir diese Informationen in Tabellen darstellen?
+]
+
+.pull-right[
+<div align="center">
+<img src="../pics/adcr-relational-data-3.png" width=300>
+</div>
+
+- Besser ist es, die Informationen aufzuteilen und eine weitere Tabelle für die Essenspräferenzen zu erstellen.
+- Es bleibt immer noch etwas Redundanz übrig. Ist es wirklich notwendig, "Hamburger" zweimal in der Tabelle zu haben?
+]
+
+
+---
+# Tabellarische Daten: Beispiel
+
+.pull-left[
+### Speicherung von Daten in Tabellen
+
+- Eine einzige Tabelle stellt bereits Beziehungen her: Alle Daten in einer Zeile gehören zu demselben Datensatz.
+- Wenn wir komplexere Beziehungen darstellen wollen (z. B. das Gewicht einer Person zweimal messen oder das Gewicht ihrer Kinder ebenfalls messen), können wir Daten von einer Tabelle zur anderen in Beziehung setzen.
+
+### Beispiel
+
+- Wir haben Daten über Peter, Paul und Mary gesammelt.
+- Wir haben Informationen über Geburtstage, Telefonnummern und Lieblingsspeisen.
+- Wie können wir diese Informationen in Tabellen darstellen?
+]
+
+.pull-right[
+<div align="center">
+<img src="../pics/adcr-relational-data-4.png" width=300>
+</div>
+<div align="center">
+<img src="../pics/adcr-relational-data-5.png" width=300>
+</div>
+
+- Jetzt ist es besser.
+- Bei der Umstrukturierung der Informationen in unserer Datenbank haben wir **Redundanz (Duplikation)** vermieden.
+- Dies ist der Prozess der **Datenbanknormalisierung**.
+]
+
+
+---
+# Was ist SQL?
+
+### Hintergrund und Geschichte
+
+- SQL (ausgesprochen [ɛsˌkjuːˈɛl] wie in S-Q-L, oder [siːkwəl] wie in sequel) steht für **Structured Query Language**. Ursprünglich hieß sie SEQUEL (Structured English Query Language), wurde aber aufgrund von Markenrechtsproblemen fallen gelassen.
+- Es handelt sich um eine domänenspezifische Sprache, die für die Abfrage von Daten in relationalen Datenbanken entwickelt wurde.
+- Ursprünglich wurde sie 1974 bei IBM von [Donald D. Chamberlin](https://en.wikipedia.org/wiki/Donald_D._Chamberlin) und [Raymond F. Boyce](https://en.wikipedia.org/wiki/Raymond_F._Boyce) entwickelt.
+
+--
+
+### Warum SQL?
+
+- Es gibt zwar unterschiedliche Datenbanktypen, aber die meisten relationalen Datenbanken, denen Sie begegnen werden, sprechen SQL.
+- Die wichtigste Fähigkeit für die Arbeit mit Datenbanken ist das Erlernen von SQL. 
+- SQL wird in vielen (den meisten?) Stellenausschreibungen für Datenwissenschaftler als erforderliche Fähigkeit aufgeführt.
+
+
+
+---
+
+# Datenbanken und Datenbankmanagementsysteme
+
+### Was sind Datenbanken?
+
+- Datenbanken sind eine organisierte Sammlung von Daten.
+- Sie sind so organisiert, dass sie ein effizientes Abrufen von Daten(-selektionen) ermöglichen.
+- Sie enthalten Daten + Metadaten über Struktur und Organisation.
+- Der Zugriff auf sie erfolgt im Allgemeinen über ein Datenbankmanagementsystem.
+
+### Wo sind Datenbanken?
+
+- Datenbanken können lokal oder dezentral, im Arbeitsspeicher oder auf der Festplatte existieren.
+- Wenn sie lokal gespeichert sind, werden sie als Binärdatei (nicht als Textdatei) gespeichert.
+- Im Allgemeinen denken wir an ein **Client-Server-Modell**:
+  - Datenbanken befinden sich auf einem **Server**, der sie verwaltet.
+  - Die Benutzer interagieren mit dem Server über ein **Client**-Programm.
+  - Mehrere Benutzer können auf dieselbe Datenbank **gleichzeitig zugreifen**.
+
+
+
+---
+# Datenbanken und Datenbankmanagementsysteme
+
+.pull-left-wide[
+### Was sind DBMS?
+
+- Datenbankmanagementsysteme (DBMS) bieten **effiziente**, **zuverlässige**, **bequeme**, **sichere** Speicherung von und Zugriff auf **massive** Daten.
+    - **Effizient**: Einfach schnell.
+    - **Zuverlässig**: Hohe Betriebszeit.
+    - **Komfortabel**: Hochwertige Abfragesprachen.
+    - **Sicher**: Robust gegenüber Stromausfällen, Knotenausfällen, usw.
+    - **Mehrbenutzer**: Gleichzeitigkeitskontrolle. Nicht nur ein Benutzer, sondern mehrere.
+    - **Massiv**: Denken Sie an Terabytes, nicht an Gigabytes. Verarbeitung von Daten, die sich außerhalb des Speichers befinden.
+- Es gibt [etliche DBMS](https://en.wikipedia.org/wiki/List_of_relational_database_management_systems) allein für relationale Datenbankstrukturen.
+- RDBMS unterscheiden sich in Bezug auf Fähigkeiten, implementierte Funktionen, Betriebssystemunterstützung und vieles mehr. Siehe [The Database Database](https://technically.dev/database-database) für einen Überblick.
+]
+
+.pull-right-small[
+<div align="center">
+<br>
+<img src="../pics/mysql-logo.png" height=120>
+<img src="../pics/postgresql-logo.png" height=150>
+<img src="../pics/sqlite-logo.png" height=110>
+<img src="../pics/duckdb-logo.png" height=50>
+</div>
+
+]
+
+---
+# Datenbanken und Datenbankmanagementsysteme (Forts.)
+
+### Drei Grundformen von DBMS
+
+- **Client-Server-DBMS**: Läuft auf einem leistungsstarken zentralen Server, den Sie von Ihrem Computer (dem Client) aus ansteuern. Ideal für die gemeinsame Nutzung von Daten durch mehrere Personen in einer Organisation. Beliebte Client-Server-DBMS sind PostgreSQL, MariaDB, SQL Server und Oracle.
+- **Cloud DBMS**: Ähnlich wie Client-Server-DBMS, aber sie werden in der Cloud ausgeführt. Das bedeutet, dass sie problemlos extrem große Datenmengen verarbeiten und bei Bedarf automatisch mehr Rechenressourcen bereitstellen können. Beliebte Beispiele: Snowflake, RedShift von Amazon und BigQuery von Google.
+- **Eingebettetes (prozessinternes) DBMS**: Werden vollständig auf Ihrem Computer oder innerhalb einer Anwendung ausgeführt. Sie eignen sich hervorragend für die Arbeit mit großen Datensätzen, bei denen Sie der Hauptnutzer sind. Beispiele: SQLite oder [DuckDB](https://duckdb.org/).
+
+### Weitere nützliche Ressourcen für den Einstieg in das Thema Datenbanken
+
+Einen guten Einstieg bietet [The Beginner's Guide to Databases](https://technically.substack.com/p/the-beginners-guide-to-databases).
+
+Außerdem [Awesome MySQL](https://github.com/shlomi-noach/awesome-mysql), eine Goldgrube für die Arbeit mit MySQL.
+
+
+
+
+---
+# Weshalb Datenbanken im Verwaltungskontext wichtig sind
+
+<div align="center">
+<img src="../pics/excel-error-paper-2.jpeg" height="500"/>
+<img src="../pics/excel-error-paper.png" height="500"/>
+</div>
+
+Eine [Fallstudie der City University London](https://blogs.city.ac.uk/cityshortcourses/2020/10/13/what-really-caused-the-excel-error-in-nhs-test-and-trace-covid-19-system-an-in-depth-technical-analysis/) zu dem Vorfall.
+
+
+
+---
+# Weshalb SQL-Skills wichtig sind
+
+.pull-left-center[
+<div align="center">
+<br>
+<img src="../pics/fb-socsci1-1.png" width="550"/>
+<img src="../pics/fb-socsci1-2.png" width="550"/>
+<img src="../pics/fb-socsci1-3.png" width="550"/>
+</div>
+`Source` [Washington Post](https://www.washingtonpost.com/technology/2021/09/10/facebook-error-data-social-scientists/)
+]
+
+
+.pull-right-center[
+<div align="center">
+<br>
+<img src="../pics/fb-socsci1-4.png" width="450"/>
+<img src="../pics/fb-socsci1-5.png" width="450"/>
+</div>
+`Source` [Solomon Messing / Twitter](https://twitter.com/solomonmg/status/1436742352039669760)
+]
+
+
+---
+class: inverse, center, middle
+name: ogd
+
+# Open Government Data
 <html><div style='float:left'></div><hr color='#EB811B' size=1px style="width:1000px; margin:auto;"/></html>
 
 ---
-name: lernziele
-# Lernziele
+# Open Government Data: Definition und Historie
 
-- **Verstehen**, wie vollständige **Daten-Workflows** in Behörden aussehen — von der Datenerzeugung bis zur Veröffentlichung.  
-- **Anwenden**, wie **Datenmanagementpläne (DMPs)** gestaltet werden, damit Prozesse nachvollziehbar und rechtssicher sind.  
-- **Bewerten**, welche **Infrastruktur-Bausteine** (DB, ETL/ELT, Kataloge, APIs) wofür geeignet sind.  
-- **Übertragen** auf ein konkretes Beispiel: ein **behördeninterner Chatbot**, der Akten findet, erklärt und **Quellen transparent** angibt.
+.pull-left-wide[
+### Was sind Open Government Data (OGD)?
+- **Definition:** Daten, die von öffentlichen Stellen bereitgestellt und zur freien Nutzung offen zugänglich sind.  
+- **Kernprinzipien:**
+  - **Kostenfreier Zugang**, **Maschinenlesbarkeit**
+  - **Offene Formate** (z. B. CSV, JSON, GeoJSON)
+  - **Offene Lizenzen** (z. B. [Datenlizenz Deutschland](https://www.govdata.de/informationen/lizenzen), CC BY)
 
-.small[Die Folien folgen dem bekannten Stil und fassen Konzepte in **einfacher Sprache** zusammen.]
+### Historische Entwicklung
+- **International:**
+  - 2009: Start von *data.gov* (USA)
+  - 2010: *data.gov.uk* (UK)
+- **Deutschland:**
+  - 2013: Start von [GovData.de](https://www.govdata.de/)
+  - 2017/2021: [Open-Data-Gesetz](https://www.bmi.bund.de/DE/themen/moderne-verwaltung/open-government/open-data/open-data-node.html) (§ 12a Open Data Gesetz)
+  - 2023: Ausbau durch [Data Act](https://bmds.bund.de/themen/digitale-wirtschaft/data-act) und Datenstrategie der Bundesregierung
+]
 
+.pull-right-small[
+<br>
+<div align="center">
+<img src="../pics/berlin-portal.png" height="450"/>
+</div>
+]
+
+
+---
+# DCAT-AP.de: Standard für offene Verwaltungsdaten
+
+.pull-left[
+### Was ist DCAT-AP.de?
+- **DCAT-AP.de** ist das **deutsche Anwendungsprofil** des europäischen Metadatenstandards **DCAT-AP (Data Catalog Vocabulary – Application Profile)**.  
+- Ziel: Einheitliche **Beschreibung, Austausch und Auffindbarkeit** von offenen Verwaltungsdaten.  
+- Entwickelt von **GovData**, **BMI**, **FITKO** und **KoSIT**.
+]
+
+.pull-right[
+### Warum wichtig?
+- Schafft **Interoperabilität** zwischen Datenportalen in Bund, Ländern und Kommunen.  
+- Ermöglicht **automatische Aggregation** von Datensätzen auf Portalen wie *GovData.de* oder *European Data Portal*.  
+- Grundlage für **maschinenlesbare Metadaten**
+]
+
+### Beispiel: DCAT-AP.de-Metadatenstruktur (vereinfacht)
+```yaml
+dcat:Dataset:
+  dct:title: "Baustellen Hamburg 2025"
+  dct:description: "Offene Daten zu aktuellen Baustellen im Stadtgebiet Hamburg"
+  dct:publisher: "Freie und Hansestadt Hamburg, Behörde für Verkehr"
+  dct:license: "Datenlizenz Deutschland – Namensnennung 2.0"
+  dcat:distribution:
+    - dcat:accessURL: "https://suche.transparenz.hamburg.de/dataset/baustellen-2025"
+      dct:format: "CSV"
+      dcat:downloadURL: "https://daten.hamburg.de/baustellen.csv"
+```
+
+
+---
+# Bedeutung von OGD heute
+
+### Chancen
+- **Transparenz & Vertrauen:** Nachvollziehbare Entscheidungsprozesse.  
+- **Innovation:** Grundlage für datenbasierte Dienstleistungen (z. B. Chatbots, Analysen).  
+- **Kollaboration:** Kooperation zwischen Verwaltung, Forschung, Zivilgesellschaft.
+
+### Herausforderungen
+- **Qualität & Aktualität:** Viele Datensätze sind veraltet oder unvollständig.  
+- **Fragmentierung:** Unterschiedliche Standards, viele kleine Portale.  
+- **Nachnutzbarkeit:** Fehlende Dokumentation, unklare Lizenzierung.  
+- **Personelle Kapazitäten:** Open Data oft „Nebenprojekt“ ohne langfristige Betreuung.
+
+### OGD im Daten-Workflow denken
+1. **Erhebung:** Welche Verwaltungsdaten können proaktiv offen bereitgestellt werden?  
+2. **Verarbeitung:** Wie lassen sich OGD mit internen Daten kombinieren (z. B. über APIs)?  
+3. **Analyse:** Welche Mehrwerte entstehen durch Verknüpfung (z. B. Lagebilder, Prognosen)?  
+4. **Kommunikation:** Ergebnisse öffentlich rückspiegeln – *Open by Default, Secure by Design.*
+
+
+
+---
+class: inverse, center, middle
+name: workflow
+
+# Daten-Workflow in der Behörde
 <html><div style='float:left'></div><hr color='#EB811B' size=1px style="width:1000px; margin:auto;"/></html>
 
----
-name: agenda
-# Agenda
 
-1. **Fallstudie**: Der Akten-Chatbot (Zielbild & Nutzen)  
-2. **Daten-Workflow**: End-to-End in der Behörde  
-3. **Datenmanagementpläne (DMPs)**: Klar, knapp, praxistauglich  
-4. **Infrastruktur**: Speichern, Verarbeiten, Bereitstellen  
-5. **ELT vs. ETL**: Was passt wozu?  
-6. **Open Government Data**: Portale, Metadaten, Lizenzen  
-7. **Betrieb & Qualität**: Monitoring, Versionierung, Verantwortlichkeiten  
-8. **Mini-Übung**: Metadaten prüfen & Verbesserungen vorschlagen
+
 
 ---
-class: middle
-name: chatbot-intro
 # Fallstudie: Der Akten-Chatbot — Worum geht es?
 
 .pull-left[
-**Ziel**  
+## Ziel
+
 Mitarbeitende sollen **schnell, verständlich und transparent** Antworten aus Akten erhalten. Der Chatbot:  
 - durchsucht **Metadaten** und **Dokumente** (PDF, Word).  
 - fasst Inhalte **in Klartext** zusammen.  
 - zeigt **genau an**, **woher** die Information stammt (Akte/Seite/Abschnitt, Link).  
 - respektiert **Zugriffsrechte** (nur sehen, was erlaubt ist).
-]
 
-.pull-right[
-**Typische Fragen**  
+## Typische Fragen 
 - *„Wie ist der aktuelle Genehmigungsstand Fall X?“*  
 - *„Welche Auflagen wurden im Bescheid vom 12.04.2024 gemacht?“*  
 - *„Bitte die wichtigsten Änderungen der letzten 30 Tage zu Vorgang Y.“*  
+]
 
-**Ergebnis**  
-- Eine Antwort mit **Quellnachweisen** und ggf. **Originalauszügen** (Snippet + Link).
+.pull-right[
+<br>
+<div align="center">
+<br>
+<img src="../pics/classification-bot.jpeg" height=350>
+</div>
 ]
 
 ---
@@ -99,30 +523,26 @@ Interne API für den Chatbot; optional Veröffentlichung ausgewählter Daten als
 Monitoring, Nutzungsfeedback, Änderungslog, regelmäßige DMP-Updates.
 ]
 
-.small[Wir nutzen diesen Ablauf gleich in jedem Abschnitt am **Chatbot-Beispiel**.]
 
 ---
 name: dmp-einfach
 # Datenmanagementplan (DMP) — kurz & alltagstauglich
 
 .pull-left[
-**Wozu?**  
-Der DMP ist die **Betriebsanleitung** für Daten: Was liegt wo, warum, wie lange, wer darf was, und welche Regeln gelten?  
+## Wozu?  
+Der DMP ist die **Betriebsanleitung** für Daten: Was liegt wo, warum, wer darf was, welche Regeln gelten?  
 **Nutzen**: Nachvollziehbarkeit, Rechtssicherheit (DSGVO), Qualität, Wiederverwendung.
-]
 
-.pull-right[
-**Was muss rein? (Chatbot-Kontext)**  
+## Was muss rein? (Chatbot-Kontext) 
 - **Bestand**: Akten-Metadaten, Dokumente, Zugriffsrechte.  
 - **Rechtslage**: Zweckbindung, Löschfristen, Veröffentlichung.  
 - **Struktur**: Tabellenfelder, Dateiformate, Versionierung.  
 - **Metadaten**: Titel, Beschreibung, Lizenz, Kontakt (DCAT-AP.de, wo sinnvoll).  
-- **Veröffentlichung**: Was bleibt intern? Was kann auf’s Portal?
+- **Veröffentlichung**: Was bleibt intern? Was kann auf's Portal?
 ]
 
----
-name: dmp-checkliste
-# DMP-Checkliste für den Chatbot
+.pull-right[
+## DMP-Checkliste für den Chatbot
 
 - **Rollen**: Data Owner (Fachbereich), Data Steward (Qualität/Metadaten), Plattform-Team (Betrieb), Datenschutz.  
 - **Datenfluss**: Wie kommen neue Akten/Dokumente ins System? (Rhythmus, Verantwortliche)  
@@ -130,40 +550,32 @@ name: dmp-checkliste
 - **Rechte**: Wer sieht welche Akten? (RBAC/ABAC)  
 - **Transparenz**: Wie werden **Quellenangaben** im Chatbot erzeugt und getestet?  
 - **Schnittstellen**: Interne API, optional Open-Data-Publikation.
+]
+
 
 ---
 name: infra-bausteine
 # Infrastruktur — was braucht der Chatbot wirklich?
 
 .pull-left[
-**Speichern**  
+## Speichern  
 - **PostgreSQL** (Metadaten, Rechte, kuratierte Sichten)  
 - **Objektspeicher** (PDF/Scans)  
 - **Suchindex/Embeddings** (schnelle Textsuche)
-]
 
-.pull-right[
-**Verarbeiten**  
+## Verarbeiten
 - **Pipelines** (Airflow/Prefect/GitHub Actions) für Import, Qualität, Aktualisierung  
 - **Transformationen** in DB (SQL/dbt) — nachvollziehbar & versioniert  
 - **API** (REST) für den Chatbot + **Audit-Logs**
 ]
 
-.small[Einfacher Start, später erweiterbar: erst Metadaten-Suche, dann Volltext/Embeddings.]
-
----
-name: etl-elt
-# ETL vs. ELT — einfach erklärt am Chatbot
-
-.pull-left[
-**ETL (Extract → Transform → Load)**  
+.pull-right[
+## ETL (Extract → Transform → Load)
 - Vor dem Laden wird stark bereinigt/vereinfacht.  
 - **Gut**, wenn Quellsysteme sehr uneinheitlich sind und zuerst „aufgeräumt“ werden muss.  
 - **Risiko**: Details gehen verloren, Nachvollziehbarkeit sinkt.
-]
 
-.pull-right[
-**ELT (Extract → Load → Transform)**  
+## ELT (Extract → Load → Transform) 
 - **Alles erst laden**, dann **im Zielsystem** aufbereiten (SQL, dbt).  
 - **Vorteil**: Rohdaten bleiben erhalten, bessere Reproduzierbarkeit.  
 - **Für den Chatbot** ideal: verschiedene Sichten für Suche, Antworten, Open Data.
@@ -199,96 +611,6 @@ So können Mitarbeitende die Antwort **prüfen** und im Original **nachlesen**.
 - Die API liefert Antwort + **Liste der Quellen**; der Chatbot rendert diese als Fußnoten/Box.
 ]
 
----
-name: open-data
-# Open Government Data — was veröffentlichen wir sinnvollerweise?
-
-.pull-left[
-**Nicht alles ist öffentlich**  
-Personenbezogenes, vertrauliche Inhalte, laufende Verfahren bleiben **intern**.  
-**Öffentlich** sind z. B. aggregierte Kennzahlen, anonymisierte Metadaten, Prozesslaufzeiten.
-]
-
-.pull-right[
-**Portale & Metadaten**  
-- Veröffentlichung auf **daten.berlin.de** (CKAN) oder **GovData** via **DCAT-AP.de**.  
-- **Lizenzen** klar und maschinenlesbar angeben (z. B. Datenlizenz Deutschland, CC BY/CC0).  
-- **Kontaktstelle** & **Aktualisierungsrhythmus** nennen.
-]
-
----
-name: portal-beispiele
-# Portale & APIs — Beispiele einbinden
-
-.pull-left[
-**Berlin Portal (CKAN)**  
-- Nutzer:innen finden Datensätze über Suche/Filter.  
-- Metadaten & Ressourcen (CSV/GeoJSON/PDF) sind verlinkt.  
-- **Action-API** für Abfragen, z. B. `package_search`.
-]
-
-.pull-right[
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
-# Live-Screenshots beim Rendern erzeugen (Internet & webshot2 nötig)
-if (requireNamespace("webshot2", quietly = TRUE)) {
-  if (!file.exists("berlin-portal.png")) {
-    webshot2::webshot("https://daten.berlin.de/", file = "berlin-portal.png", vwidth = 1400, vheight = 900)
-  }
-  knitr::include_graphics("berlin-portal.png")
-} else {
-  cat("Hinweis: Paket 'webshot2' nicht installiert – Portal live zeigen.")
-}
-```
-]
-
-.small[Quelle: daten.berlin.de — CKAN]
-
----
-name: ckan-api
-# CKAN-API — kurze Demo (lesbar & anpassbar)
-
-.pull-left[
-**Suchen**  
-`GET https://daten.berlin.de/api/3/action/package_search?q=bau`  
-
-**Details**  
-`GET .../api/3/action/package_show?id=<dataset-id>`  
-
-**Ressource**  
-`GET .../api/3/action/resource_show?id=<resource-id>`
-]
-
-.pull-right[
-```{r, eval=FALSE}
-# R-Beispiel: CKAN-Suche
-library(httr); library(jsonlite)
-res <- GET("https://daten.berlin.de/api/3/action/package_search",
-           query = list(q = "bau", rows = 5))
-dat <- content(res, as="text", encoding="UTF-8") |> fromJSON(flatten=TRUE)
-dat$result$results[, c("title","id","organization.title")]
-```
-]
-
----
-name: govdata
-# GovData & DCAT-AP.de
-
-.pull-left[
-**GovData** bündelt offene Verwaltungsdaten (Bund/Länder/Kommunen).  
-**DCAT-AP.de** sorgt dafür, dass Portale kompatibel sind (gemeinsame Metadatenfelder).  
-Unser Chatbot kann — falls erlaubt — auch **OGD-Bestände** referenzieren.
-]
-
-.pull-right[
-```{r, echo=FALSE, message=FALSE, warning=FALSE}
-if (requireNamespace("webshot2", quietly = TRUE)) {
-  if (!file.exists("govdata.png")) {
-    webshot2::webshot("https://www.govdata.de/", file = "govdata.png", vwidth = 1400, vheight = 900)
-  }
-  knitr::include_graphics("govdata.png")
-}
-```
-]
 
 ---
 name: qualitaet-betrieb
@@ -310,26 +632,8 @@ name: rollout
 4. **Rechteprüfung** vor Anzeige; Schulung & Leitfaden.  
 5. **Skalierung** auf weitere Bereiche; OGD-Teilmengen veröffentlichen.
 
----
-name: mini-uebung
-# Mini-Übung (15') — Metadaten & Transparenz einschätzen
-
-1. Wählen Sie zu einem Thema einen Datensatz auf **daten.berlin.de**.  
-2. Prüfen Sie die Metadaten: **Lizenz, Aktualität, Kontakt, Ressourcen**.  
-3. Notieren Sie 2 Verbesserungen für **Suchbarkeit** und **Transparenz**.  
-4. Überlegen Sie, welche Felder/Prüfungen Ihrem **Chatbot** helfen würden (z. B. eindeutige Dokument-IDs).
-
----
-name: weiterfuehrend
-# Weiterführende Ressourcen (Auswahl)
-
-- **Berlin Open Data (CKAN)** – Portal & API-Doku  
-- **GovData** – Nationales Portal, Infos zu DCAT-AP.de  
-- **DCAT-AP.de Leitfäden** – Metadaten für Verwaltungen  
-- **dbt, Airflow/Prefect** – Transformation & Orchestrierung  
-- **Great Expectations** – Datenqualität als Code
 
 ---
 class: inverse, center, middle
-name: qna
-# Fragen? Beispiele aus Ihrer Praxis!
+
+# Beispiele aus Eurer Praxis!
