--- a/d3s11-wrapup/d3s11-wrapup.Rmd
+++ b/d3s11-wrapup/d3s11-wrapup.Rmd
@@ -155,7 +155,7 @@ name: aufgabe
 
 Erstellen Sie gemeinsam mit einem/einer Kursteilnehmer/in eine Podcast-Aufnahme, die mindestens 2 der 3 folgenden Elemente beinhaltet. 
 
-1. **Einblick in einen Daten-Use-Case aus Ihrer Behörde**: Stellen Sie einen interessanten Fall aus Ihrer Arbeit vor, bei dem Daten eine zentrale Rolle spielen – z. B. ein innovatives Projekt, ein internes Verfahren, etc. Das kann ein Best- oder Worst-Practice-Beispiel sein (oder etwas dazwischen). Gehen Sie dabei auch auf Konzepte aus dem Kurs ein, z.B. Datenqualität, Schnittstellen, Weiternutzung, etc.
+1. **Einblick in einen Daten-Use-Case aus Ihrer Behörde**: Stellen Sie einen interessanten Fall aus Ihrer Arbeit vor, bei dem Daten eine zentrale Rolle spielen – z.B. ein innovatives Projekt, ein internes Verfahren, etc. Das kann ein Best- oder Worst-Practice-Beispiel sein (oder etwas dazwischen). Gehen Sie dabei auch auf Konzepte aus dem Kurs ein, z.B. Datenqualität, Schnittstellen, Weiternutzung, etc.
 
 2. **Daten-Fail der Woche**: Bringen Sie einen aktuellen Nachrichtenartikel, Blogbeitrag oder Social-Media-Post mit, in dem eine problematische oder missverständliche Datennutzung beschrieben wird (kann, muss aber nicht KI-bezogen sein). Diskutieren Sie gemeinsam, was schiefgelaufen ist und was man daraus für den Umgang mit Daten lernen kann. Als Inspiration kann der Podcast *More or Less: Behind the Stats* dienen.
 
@@ -166,6 +166,10 @@ Erstellen Sie gemeinsam mit einem/einer Kursteilnehmer/in eine Podcast-Aufnahme,
 <br>
 <div align="center">
 <img src="../pics/podcast-aufnahme.jpeg" height="180"/>
+</div>
+<br>
+<div align="center">
+<img src="../pics/podcast-more-or-less.jpeg" height="180"/>
 </div>
 ]
 
@@ -212,6 +216,8 @@ Erstellen Sie gemeinsam mit einem/einer Kursteilnehmer/in eine Podcast-Aufnahme,
 <img src="../pics/my-first-sony.png" height="220"/>
 </div>
 ]
+
+
 
 
 
